@@ -1,5 +1,5 @@
 # This file is updated automatically by Makefile.
 glibc-branch := fedora
 glibc-base := HEAD
-fedora-sync-date := 2005-04-27 19:12 UTC
-fedora-sync-tag := fedora-glibc-20050427T1912
+fedora-sync-date := 2005-04-28 08:46 UTC
+fedora-sync-tag := fedora-glibc-20050428T0846
